add MapperConfig